--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-numpy 
-pandas 
-seaborn
-sckit-learn
-streamlit==0.24.0
+numpy==1.19.5
+pandas==1.1.5
 matplotlib==3.4.3
-
-
-
+seaborn==0.11.2
+scikit-learn==0.24.2
+streamlit==1.4.0
